@@ -579,6 +579,8 @@ because of Phabricator reports.
   - mNewSectionLink      - Get with showNewSectionLink()
   - mHideNewSectionLink  - Set with forceHideNewSectionLink()
   - mNoGallery           - getNoGallery()
+* The 'help' key in HTMLForm descriptors is deprecated. Use the 'help-raw'
+  key instead.
 * …
 
 === Other changes in 1.43 ===
